added style for header and also added action icons, fixed margins, and added groups component

--- a/instapay-client/src/App.scss
+++ b/instapay-client/src/App.scss
@@ -1,7 +1,14 @@
 * {
   box-sizing: border-box;
+  a {
+    color: black;
+  }
 }
 
 .App {
   height: 100vh;
+}
+
+.appContent {
+  margin-top: 110px;
 }
