--- a/instapay-client/src/components/Header/Header.scss
+++ b/instapay-client/src/components/Header/Header.scss
@@ -3,18 +3,28 @@
   align-items: center;
   top: 0;
   width: 100%;
-  height: 60px;
-  background-color: #cc0000;
+  height: 90px;
+  background-color: black;
   position: fixed;
   z-index: 1;
+}
+
+.headerLogo {
+  padding-left: 15px;
 }
 
 .headerLinks {
   display: flex;
   width: 100%;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .link {
   margin-right: 40px;
+}
+
+.headerAccount {
+  height: 90px;
+  background-color: #ff0230;
+  width: 300px;
 }
