changed style in form for group fields...

--- a/instapay-client/src/components/CustomForm/CustomForm.scss
+++ b/instapay-client/src/components/CustomForm/CustomForm.scss
@@ -3,6 +3,11 @@
   color: red;
 }
 
+.groupField {
+  display: flex !important;
+  justify-content: center;
+}
+
 .saveObj {
   display: flex;
   justify-content: center;
