refactored table titles..

--- a/instapay-client/src/components/CustomTable/CustomTable.scss
+++ b/instapay-client/src/components/CustomTable/CustomTable.scss
@@ -17,3 +17,13 @@
 .tableHeaderWrapper {
   display: flex;
 }
+
+.tableTitle {
+  display: flex;
+  align-items: center;
+}
+
+.tablePageing {
+  display: flex;
+  justify-content: flex-end;
+}
