--- a/instapay-client/src/components/Terminal/TerminalActions/TerminalActions.scss
+++ b/instapay-client/src/components/Terminal/TerminalActions/TerminalActions.scss
@@ -1,4 +1,4 @@
-.disabledLink {
-  pointer-events: none;
-  opacity: 0.5;
-}
+// .disabledLink {
+//   pointer-events: none;
+//   opacity: 0.5;
+// }
