--- a/instapay-client/src/components/Group/GroupRoles/GroupRoles.scss
+++ b/instapay-client/src/components/Group/GroupRoles/GroupRoles.scss
@@ -1,3 +1,9 @@
 .checkboxContainer {
+  display: flex;
+  flex-direction: column;
   padding-top: 15px;
+}
+
+.groupRoleDescription {
+  padding-left: 10px;
 }
