--- a/instapay-client/src/components/User/UserGroups/UserGroups.scss
+++ b/instapay-client/src/components/User/UserGroups/UserGroups.scss
@@ -1,3 +1,9 @@
 .checkboxContainer {
+  display: flex;
+  flex-direction: column;
   padding-top: 15px;
+}
+
+.userGroupDescription {
+  padding-left: 10px;
 }
