--- a/instapay-client/src/components/Terminal/TerminalDetails/TerminalDetails.scss
+++ b/instapay-client/src/components/Terminal/TerminalDetails/TerminalDetails.scss
@@ -9,17 +9,7 @@
   margin-bottom: 10px;
 }
 
-.terminalDetailsUserId {
+.terminalDetailsCards {
   display: flex;
   justify-content: center;
-  padding-top: 10px;
-}
-
-.terminalDetailsCardContent {
-  display: flex;
-  justify-content: space-between;
-}
-
-.terminalDetailsData {
-  font-size: 20px;
 }
