refactoring prop types

--- a/instapay-client/src/components/CustomLoader/CustomLoader.scss
+++ b/instapay-client/src/components/CustomLoader/CustomLoader.scss
@@ -4,3 +4,7 @@
   justify-content: center;
   align-items: center;
 }
+
+.ui.loader:after {
+  border-color: #767676 transparent transparent !important;
+}
