--- a/instapay-client/src/components/Terminal/TerminalDetails/TerminalDetails.scss
+++ b/instapay-client/src/components/Terminal/TerminalDetails/TerminalDetails.scss
@@ -5,6 +5,11 @@
   align-items: center;
 }
 
+.detailsNavbar {
+  color: black;
+  font-weight: 500;
+}
+
 .terminalDetailsTitle {
   margin-bottom: 10px;
 }
