--- a/instapay-client/src/components/Transactions/TransactionsGlobal.scss
+++ b/instapay-client/src/components/Transactions/TransactionsGlobal.scss
@@ -25,13 +25,17 @@
   justify-content: center;
 }
 
-.dateLabel {
+.transactionsGlobalTerminalInput {
+  margin-top: 10px;
+}
+
+.transactionsGlobalDateLabel {
   display: flex;
   align-items: center;
   padding-right: 5px;
   padding-left: 5px;
   font-weight: bold;
-  margin-top: 10px;
+  margin-top: 13px;
 }
 
 .transactionsGlobalDate {
