--- a/instapay-client/src/components/Merchant/Merchants/Merchants.scss
+++ b/instapay-client/src/components/Merchant/Merchants/Merchants.scss
@@ -14,9 +14,9 @@
 }
 
 .merchantFormHeader {
-  display: flex;
-  justify-content: center;
-  margin: 0;
+  // display: flex;
+  // justify-content: center;
+  // margin: 0;
 }
 
 .saveMerchant {
