--- a/instapay-client/src/components/Fee/AddFee/AddFee.scss
+++ b/instapay-client/src/components/Fee/AddFee/AddFee.scss
@@ -1,5 +1,19 @@
-.feeFormHeader {
-  display: flex;
-  justify-content: center;
+.addFeeFormTitle {
   margin: 0;
+}
+
+.addFeeFormHeader {
+  padding-left: 25%;
+  padding-right: 25%;
+  display: flex;
+  align-items: center;
+}
+
+.addFeeFormIconWrapper {
+  color: royalblue;
+  font-size: 16px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  margin-right: 30%;
 }
