--- a/instapay-client/src/components/Group/EditGroup/EditGroup.scss
+++ b/instapay-client/src/components/Group/EditGroup/EditGroup.scss
@@ -1,5 +1,19 @@
-.groupFormHeader {
-  display: flex;
-  justify-content: center;
+.editGroupFormTitle {
   margin: 0;
+}
+
+.editGroupFormHeader {
+  padding-left: 25%;
+  padding-right: 25%;
+  display: flex;
+  align-items: center;
+}
+
+.editGroupFormIconWrapper {
+  color: royalblue;
+  font-size: 16px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  margin-right: 30%;
 }
