--- a/instapay-client/src/components/Merchant/EditMerchant/EditMerchant.scss
+++ b/instapay-client/src/components/Merchant/EditMerchant/EditMerchant.scss
@@ -1,5 +1,19 @@
-.merchantFormHeader {
-  display: flex;
-  justify-content: center;
+.editMerchantFormTitle {
   margin: 0;
+}
+
+.editMerchantFormHeader {
+  padding-left: 25%;
+  padding-right: 25%;
+  display: flex;
+  align-items: center;
+}
+
+.editMerchantFormIconWrapper {
+  color: royalblue;
+  font-size: 16px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  margin-right: 30%;
 }
