--- a/instapay-client/src/components/User/AddUser/AddUser.scss
+++ b/instapay-client/src/components/User/AddUser/AddUser.scss
@@ -1,5 +1,19 @@
-.userFormHeader {
-  display: flex;
-  justify-content: center;
+.addUserFormTitle {
   margin: 0;
+}
+
+.addUserFormHeader {
+  padding-left: 25%;
+  padding-right: 25%;
+  display: flex;
+  align-items: center;
+}
+
+.addUserFormIconWrapper {
+  color: royalblue;
+  font-size: 16px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  margin-right: 30%;
 }
