--- a/instapay-client/src/components/User/EditUser/EditUser.scss
+++ b/instapay-client/src/components/User/EditUser/EditUser.scss
@@ -1,5 +1,19 @@
-.userFormHeader {
-  display: flex;
-  justify-content: center;
+.editUserFormTitle {
   margin: 0;
+}
+
+.editUserFormHeader {
+  padding-left: 25%;
+  padding-right: 25%;
+  display: flex;
+  align-items: center;
+}
+
+.editUserFormIconWrapper {
+  color: royalblue;
+  font-size: 16px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  margin-right: 30%;
 }
