--- a/instapay-client/src/components/CustomForm/CustomForm.scss
+++ b/instapay-client/src/components/CustomForm/CustomForm.scss
@@ -8,10 +8,14 @@
   justify-content: center;
 }
 
-.saveObj {
+.buttonsWrapper {
   display: flex;
   justify-content: center;
   padding-top: 10px;
+}
+
+.saveBtn {
+  margin-left: 15px !important;
 }
 
 .formWrapper {
