--- a/instapay-client/src/components/Terminal/AddTerminal/AddTerminal.scss
+++ b/instapay-client/src/components/Terminal/AddTerminal/AddTerminal.scss
@@ -1,19 +1,5 @@
-.addTerminalFormTitle {
+.terminalFormHeader {
+  display: flex;
+  justify-content: center;
   margin: 0;
-}
-
-.addTerminalFormHeader {
-  padding-left: 25%;
-  padding-right: 25%;
-  display: flex;
-  align-items: center;
-}
-
-.addTerminalFormIconWrapper {
-  color: royalblue;
-  font-size: 16px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  margin-right: 20%;
 }
