--- a/instapay-client/src/components/Fee/EditFee/EditFee.scss
+++ b/instapay-client/src/components/Fee/EditFee/EditFee.scss
@@ -1,19 +1,5 @@
-.editFeeFormTitle {
+.feeFormHeader {
+  display: flex;
+  justify-content: center;
   margin: 0;
-}
-
-.editFeeFormHeader {
-  padding-left: 25%;
-  padding-right: 25%;
-  display: flex;
-  align-items: center;
-}
-
-.editFeeFormIconWrapper {
-  color: royalblue;
-  font-size: 16px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  margin-right: 30%;
 }
