--- a/instapay-client/src/components/Group/AddGroup/AddGroup.scss
+++ b/instapay-client/src/components/Group/AddGroup/AddGroup.scss
@@ -1,19 +1,5 @@
-.addGroupFormTitle {
+.groupFormHeader {
+  display: flex;
+  justify-content: center;
   margin: 0;
-}
-
-.addGroupFormHeader {
-  padding-left: 25%;
-  padding-right: 25%;
-  display: flex;
-  align-items: center;
-}
-
-.addGroupFormIconWrapper {
-  color: royalblue;
-  font-size: 16px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  margin-right: 30%;
 }
