--- a/instapay-client/src/components/Merchant/AddMerchant/AddMerchant.scss
+++ b/instapay-client/src/components/Merchant/AddMerchant/AddMerchant.scss
@@ -1,19 +1,5 @@
-.addMerchantFormTitle {
+.merchantFormHeader {
+  display: flex;
+  justify-content: center;
   margin: 0;
-}
-
-.addMerchantFormHeader {
-  padding-left: 25%;
-  padding-right: 25%;
-  display: flex;
-  align-items: center;
-}
-
-.addMerchantFormIconWrapper {
-  color: royalblue;
-  font-size: 16px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  margin-right: 30%;
 }
