--- a/instapay-client/src/components/PointOfSale/EditPointOfSale/EditPointOfSale.scss
+++ b/instapay-client/src/components/PointOfSale/EditPointOfSale/EditPointOfSale.scss
@@ -1,19 +1,5 @@
-.editPointOfSaleFormTitle {
+.pointOfSaleFormHeader {
+  display: flex;
+  justify-content: center;
   margin: 0;
-}
-
-.editPointOfSaleFormHeader {
-  padding-left: 25%;
-  padding-right: 25%;
-  display: flex;
-  align-items: center;
-}
-
-.editPointOfSaleFormIconWrapper {
-  color: royalblue;
-  font-size: 16px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  margin-right: 20%;
 }
